public/stylesheets/beta.css
/* ... */
#mypage.history .tab a.active {
  color: #f19996;
}

#mypage.history .collapsible {
  border: none;
  box-shadow: none;
}

#mypage.history .collapsible li {
  border-bottom: dashed 1px #b3c2cf;
}

#mypage.history .collapsible-header {
  border: none;
  padding: 0;
}

#mypage.history .collapsible-body {
  border: none;
}

#mypage.history .order-info {
  padding: 0 18px 0 32px;
}

#mypage.history .order-id-title {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.29;
  color: #5aa0d6;
}

#mypage.history .order-id {
  font-family: SVN-Karla;
  font-size: 16px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #fea3a3;
}


#mypage.history .order-date {
  font-family: SVN-Karla;
  font-size: 15px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: right;
  color: #2074bd;
}

#mypage.history .order {
  display: inline-block;
  width: 100%;
  border-radius: 2px;
  background-color: #f4faff;
  padding: 12px 17px 11px 31px;
}

#mypage.history .title {
  text-align: left;
  margin-bottom: 2px;
}

#mypage.history .sub {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #5aa0d6;
  line-height: 1;
}

#mypage.history .price {
  text-align: right;
  font-family: SVN-Karla;
  font-size: 22px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #fea3a3;
  line-height: 1;
}

#mypage.history #cart {
  margin: 0;
}

#mypage.history #cart .cart-products, #mypage.history #cart .cart-total {
  display: inline-block;
  width: 100%;
}

#mypage.history #cart .cart-total .col {
  padding: 0;
}

#mypage.history #cart .delivery-info {
  padding: 0 20px 28px;
  margin-bottom: 28px;
}

#mypage.history #cart .label {
  font-family: SVN-Karla;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
}

#mypage.history #cart .order-cancel {
  padding: 9px 21px;
  font-family: SVN-Karla;
  font-size: 13px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #ffffff;
  border-radius: 100px;
  background-color: #3ebbed;
}

/* Terms */

#terms {
  margin-top: 45px;
}

#terms h2 {
  font-family: Estilo;
  font-size: 80px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 0.81;
  text-align: center;
  color: #fea3a3;
}

#terms .tab-wrapper {
  padding-top: 115px;
}

#terms .table-of-contents li a {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
}

#terms .table-of-contents li a.active {
  color: #2074bd;
}

#terms p.title {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #2074bd;
}

#terms p.terms, #terms .info-details {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #5aa0d6;
}

#terms #transport_fee div {
  text-align: center;
}

#terms #transport_fee div.title {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #2074bd;
}

#terms #transport_fee .cell {
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #2074bd;
}

#terms #transport_fee .extra-pad {
  padding-top: 10px;
  padding-bottom: 69px;
  border-top: none;
  border-right: solid 1px #b3c2cf;  
}

#terms #transport_fee .l7 .l4:nth-child(3) .extra-pad {
  padding-bottom: 53px;
  padding-top: 5px;
  border-right: none; 
}

#terms #transport_fee .l7 .l4:nth-child(3) .cell {
  border-right: none;
}

#terms #transport_fee .l4, #terms #transport_fee .l7, #terms #transport_fee .l5 {
  padding: 0;
}

#terms #transport_fee .cell {
  border-right: solid 1px #b3c2cf;
  border-top: solid 1px #b3c2cf;
  padding-top: 13px;
}


#terms #transport_fee .l5 .cell {
  border-left: solid 1px #b3c2cf;
  border-right: none;  
}

#terms #transport_fee .province {
  padding-bottom: 7px;
  border-bottom: solid 1px #b3c2cf;
  border-left: solid 1px #b3c2cf;  
}

#terms #transport_fee .sub.title {
  padding-top: 13px;
  padding-bottom: 16px;
  border-left: solid 1px #b3c2cf;  
}

#terms #transport_fee .l5 .l4:nth-child(4) .sub {
  padding-bottom: 4px;
  padding-top: 4px;
}

/* Wholesale */

#wholesale h2 {
  font-family: SVN-Karla;
  font-size: 22px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  text-align: left;
  color: #2074bd;
}

#wholesale .l5 .l8 {
    padding: 9px 0 10px 14px;
    margin-top: 0;
}

#wholesale .l5 .l4 {
  padding-top: 9px;
}

#wholesale .info {
  padding: 0 !important;
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #5aa0d6;
  margin-bottom: 26px;
}

#wholesale button {
  padding: 6px 21px 5px !important;
}

#wholesale #message {
  margin-bottom: 26px;
}

/* Blog */

#blog {
  padding: 0 90px;
}

#blog h1 {
  font-family: SVN-Karla;
  font-size: 35px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  color: #fea3a3;
}

#blog article {
  border-radius: 5px;
  background-color: #ffffff;
  box-shadow: 0 2px 4px 0 rgba(206, 206, 206, 0.5);
  padding: 0 0 18px 0;
  margin-bottom: 14px;
}

#blog .grid-item {
  width: calc(33.3333333333% - 15px);  
}

#blog article:nth-child(3n+1) {
  margin-right: 0;
}

#blog article .cover img {
  width: 100%;
}

#blog article > *:not(.cover) {
  padding: 0 30px;
}

#blog .tags a {
  display: inline-block;
  font-family: SVN-Karla;
  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  color: #b3c2cf;
}

#blog .tags a:hover {
  color: #2074bd;
}
/* ... */

